[gd_scene load_steps=11 format=3 uid="uid://c5popbpeenj6b"]

[ext_resource type="Script" uid="uid://bp25vn6qedro4" path="res://scripts/hero_card.gd" id="1_xhqhn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cr2ud"]
bg_color = Color(0.101960786, 0.101960786, 0.18039216, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.30588236, 0.8, 0.6392157, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_esbxp"]
color = Color(0.30588236, 0.8, 0.6392157, 1)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ostgd"]
bg_color = Color(0.1764706, 0.1764706, 0.26666668, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_csmvj"]
bg_color = Color(0.9019608, 0.22352941, 0.27450982, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwdc6"]
bg_color = Color(0.1764706, 0.1764706, 0.26666668, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e8lrv"]
bg_color = Color(0.30588236, 0.8, 0.6392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o32yc"]
bg_color = Color(0.30588236, 0.8, 0.6392157, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_brcrk"]
bg_color = Color(0.22745098, 0.60784316, 0.49411765, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwymw"]
bg_color = Color(0.27058825, 0.7019608, 0.5764706, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="HeroCard" type="PanelContainer"]
custom_minimum_size = Vector2(350, 180)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cr2ud")
script = ExtResource("1_xhqhn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0.8509804, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Hero Name"

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84313726, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Lv.1"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_esbxp")

[node name="StatsRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="LeftStats" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatsRow"]
layout_mode = 2

[node name="StrengthLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsRow/LeftStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "ðŸ’ª STR: 0"

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsRow/LeftStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "âš¡ SPD: 0"

[node name="IntelligenceLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsRow/LeftStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "ðŸ§  INT: 0"

[node name="CenterStats" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatsRow"]
layout_mode = 2

[node name="SpecialtiesLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsRow/CenterStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Specialties:"
horizontal_alignment = 1

[node name="SpecialtyList" type="Label" parent="MarginContainer/VBoxContainer/StatsRow/CenterStats"]
layout_mode = 2

[node name="RightStats" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatsRow"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsRow/RightStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Health"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/StatsRow/RightStats"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ostgd")
theme_override_styles/fill = SubResource("StyleBoxFlat_csmvj")
value = 100.0

[node name="StaminaLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsRow/RightStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Stamina"
horizontal_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/StatsRow/RightStats"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_rwdc6")
theme_override_styles/fill = SubResource("StyleBoxFlat_e8lrv")
value = 100.0

[node name="StatusTextLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsRow/RightStats"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.65882355, 0.65882355, 0.65882355, 1)
theme_override_font_sizes/font_size = 12

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_o32yc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_brcrk")
theme_override_styles/hover = SubResource("StyleBoxFlat_iwymw")
text = "SELECT FOR MISSION"
